--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "build": "tsup"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.9",
+    "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
-    "@babel/preset-typescript": "^7.26.0",
+    "@babel/preset-typescript": "^7.27.0",
     "babel-jest": "^29.7.0",
-    "hi-utils-pro": "^1.0.3",
+    "hi-utils-pro": "^1.0.5",
+    "hi-validator": "^1.0.2",
     "jest": "^29.7.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.4.0"
@@ -26,9 +27,10 @@
     "dayjs": "^1.11.13",
     "element-plus": "^2.9.4",
     "hi-datatype-operation": "^1.0.5",
+    "hi-guardian": "^1.0.4",
     "hi-utils-pro": "^1.0.3",
-    "vue-router": "^4.5.0",
-    "hi-guardian": "^1.0.4"
+    "hi-validator": "^1.0.2",
+    "vue-router": "^4.5.0"
   },
   "keywords": [],
   "packageManager": "pnpm@10.7.1"
