--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hi-http",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "",
   "license": "ISC",
   "author": "杜朝辉",
@@ -30,7 +30,8 @@
     "hi-guardian": "^1.0.4",
     "hi-utils-pro": "^1.0.3",
     "hi-validator": "^1.0.2",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "sm-core": "^1.0.0"
   },
   "keywords": [],
   "packageManager": "pnpm@10.7.1"
