--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.27.0",
     "@types/jest": "^29.5.12",
+    "@types/node": "^24.3.3",
     "babel-jest": "^29.7.0",
     "hi-utils-pro": "^1.0.5",
     "hi-validator": "^1.0.2",
@@ -35,8 +36,8 @@
     "hi-guardian": "^1.0.4",
     "hi-utils-pro": "^1.0.3",
     "hi-validator": "^1.0.2",
-    "vue-router": "^4.5.0",
-    "sm-core": "^1.0.0"
+    "sm-core": "^1.0.0",
+    "vue-router": "^4.5.0"
   },
   "keywords": [],
   "packageManager": "pnpm@10.7.1"
